# agentic-primitives

./: .env.example  .gitignore  ADR_AUDIT_REPORT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  LICENSE  Makefile  PROJECT-PLAN_20251118_analytics-integration.md  PROJECT-PLAN_20260113_v2-simplification.md  README.md  V2-CLI-GENERATOR-TODO.md  V2-DESIGN-COMPLETE.md  V2-WORKTREE-README.md  claude-code@latest-20260113.md  cspell.json  justfile  primitives.config.yaml  pyproject.toml
cli/: Cargo.toml  README.md
cli/benches/: build_bench.rs  validation_bench.rs
cli/src/: config.rs  error.rs  lib.rs  main.rs  manifest.rs  models.rs  schema.rs
cli/src/commands/: build.rs  build_v2.rs  config_cmd.rs  init.rs  inspect.rs  install.rs  list.rs  migrate.rs  mod.rs  new.rs  new_v2.rs  test_hook.rs  validate.rs  version.rs
cli/src/primitives/: hook.rs  mod.rs  prompt.rs  skill.rs  tool.rs
cli/src/providers/: claude.rs  claude_v2.rs  mod.rs  openai.rs  registry.rs
cli/src/templates/: embedded.rs  hook_wrapper.py.template  hook_wrapper_with_config.py.template  mod.rs  render.rs
cli/src/templates/templates/: agent.meta.yaml.hbs  command.meta.yaml.hbs  hook.meta.yaml.hbs  meta-prompt.meta.yaml.hbs  skill.meta.yaml.hbs  tool.impl.py.hbs  tool.impl.ts.hbs  tool.meta.yaml.hbs  tool.package-json.hbs  tool.pyproject.hbs  tool.readme.hbs  tool.test.py.hbs  tool.test.ts.hbs  tool.tsconfig.hbs
cli/src/templates/tool/: tool.yaml.hbs
cli/src/validation/: mod.rs
cli/src/validators/: frontmatter.rs  mod.rs  schema.rs
cli/src/validators/v1/: schema.rs  semantic.rs  structural.rs
cli/tests/: test_analytics_middleware.rs  test_build.rs  test_claude_transformer.rs  test_cross_version.rs  test_full_lifecycle.rs  test_install.rs  test_migrate.rs  test_openai_transformer.rs  test_providers.rs  test_test_hook.rs  test_version.rs
cli/tests/e2e/: mod.rs  test_full_lifecycle.rs
cli/v1/: .gitignore  Cargo.toml
cli/v1/src/: error.rs  main.rs  models.rs  spec_version.rs
cli/v1/src/commands/: config_cmd.rs  init.rs  inspect.rs  migrate.rs  new.rs  version.rs
cli/v1/src/primitives/: hook.rs  mod.rs  prompt.rs
cli/v1/src/providers/: mod.rs  registry.rs
cli/v1/tests/: test_analytics_middleware.rs  test_test_hook.rs
cli/v1/tests/e2e/: test_cross_version.rs  test_error_handling.rs
cli/v2/: Cargo.toml  README.md
cli/v2/benches/: validation_bench.rs
cli/v2/src/: lib.rs
cli/v2/src/commands/: build.rs  mod.rs  new_v2.rs  validate.rs
cli/v2/src/providers/: mod.rs
cli/v2/src/templates/: command.md.hbs  skill.md.hbs
cli/v2/src/utils/: mod.rs  pattern.rs
cli/v2/src/validators/: schema.rs
cli/v2/tests/: test_build.rs  test_error_handling.rs  test_full_lifecycle.rs  test_install.rs  test_migrate.rs  test_openai_transformer.rs  test_version.rs
cli/v2/tests/e2e/: test_full_lifecycle.rs
examples/000-claude-integration/: README.md  demo.sh  main.py  pyproject.toml  test-hooks.sh  validate_events.py
examples/000-claude-integration/.agentic/analytics/: events.jsonl
examples/000-claude-integration/.claude/: settings.json
examples/000-claude-integration/fixtures/: normal-prompt.json  pii-prompt.json  safe-bash.json  sensitive-file.json
examples/001-claude-agent-sdk-integration/: .env.example  .gitignore  README.md  build-hooks.sh  demo.sh  pyproject.toml
examples/001-claude-agent-sdk-integration/.claude/: settings.json
examples/001-claude-agent-sdk-integration/src/: agent.py  metrics.py  scenarios.py
examples/002-observability-dashboard/backend/: main.py  pyproject.toml
examples/002-observability-dashboard/backend/src/: __init__.py
examples/003-otel-first-agent/: README.md  docker-compose.yaml  generate_hooks.py  main.py  otel-config.yaml  prometheus.yaml  pyproject.toml  run_isolated.py
lib/python/agentic_adapters/: pyproject.toml
lib/python/agentic_adapters/agentic_adapters/: __init__.py
lib/python/agentic_adapters/tests/: __init__.py  test_cli_adapter.py  test_sdk_adapter.py
lib/python/agentic_analytics/: README.md  pyproject.toml
lib/python/agentic_analytics/agentic_analytics/: __init__.py  client.py  emitter.py  events.py  models.py  validation.py
lib/python/agentic_analytics/tests/: __init__.py  test_client.py  test_models.py  test_validation.py
lib/python/agentic_events/: README.md  conftest.py  pyproject.toml
lib/python/agentic_events/tests/: __init__.py  (+8 more)
lib/python/agentic_hooks/: README.md  pyproject.toml
lib/python/agentic_memory/: README.md  pyproject.toml
lib/python/agentic_observability/: README.md  pyproject.toml
lib/python/agentic_settings/: README.md  pyproject.toml
lib/python/agentic_workspace/: README.md  pyproject.toml
playground/: README.md  docker-compose.yaml  pyproject.toml  run.py
playground/prompts/: simple-task.md  subagent-test.md
playground/scenarios/: code-review.yaml  default.yaml  quick-haiku.yaml  quick-task.yaml  security-audit.yaml  subagent-concurrent.yaml
playground/src/: __init__.py  config.py  display.py  executor.py  models.py  receiver.py
playground/tests/: __init__.py  test_models.py
playground/workspace/: Dockerfile
services/analytics/: ARCHITECTURE.md  README.md  SECURITY.md  generate_schema.py  pyproject.toml
services/analytics/middleware/: __init__.py  event_normalizer.py  event_publisher.py
services/analytics/tests/: conftest.py  test_config.py  test_e2e.py  test_models.py  test_normalizer.py  test_publishers.py
services/hooks/: .dockerignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
services/hooks/migrations/: 001_initial_schema.sql
services/hooks/tests/: __init__.py  test_api.py  test_storage.py
tests/consumer_contracts/: pyproject.toml  test_aef_contract.py
tests/integration/: README.md  __init__.py  conftest.py  docker-compose.yaml  otel-collector-config.yaml  pyproject.toml  test_claude_cli_attribution.py  test_entrypoint_lsp_settings.py  test_entrypoint_memory.py  test_entrypoint_workspace_injection.py  test_otel_pipeline.py
tests/unit/scripts/: pyproject.toml  test_install_plugin.py  test_validate_plugins.py
(+1648 files in other folders)
