[package]
name = "agentic-primitives"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Agentic Primitives Team <team@agentic-primitives.dev>"]
description = "Atomic building blocks for AI coding systems"
license = "Apache-2.0"
repository = "https://github.com/neural/agentic-primitives"
keywords = ["ai", "agents", "llm", "primitives", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agentic-p"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Validation
jsonschema = "0.37"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
walkdir = "2.5"
dirs = "5.0"

# Terminal output
colored = "2.1"
comfy-table = "7.1"

# Templating
handlebars = "5.1"

# Hashing (for versioning)
blake3 = "1.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.34"
criterion = "0.5"

[[bench]]
name = "validation_bench"
harness = false

[[bench]]
name = "build_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

