[project]
name = "claude-hooks-integration"
version = "1.0.0"
description = "Integration example showing agentic-primitives hooks with Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
dev-dependencies = []


