[project]
name = "agentic-workspace"
version = "0.1.0"
description = "Workspace prompts and contracts for agentic systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_workspace"]

# Include prompt files in the package
[tool.hatch.build.targets.wheel.force-include]
"agentic_workspace/prompts" = "agentic_workspace/prompts"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
