[project]
name = "scripts-unit-tests"
version = "1.0.0"
description = "Unit tests for plugin installer and validator scripts"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
