[package]
name = "itmux"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Rust port of the interactive-tmux workspace driver (Python parity)."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "itmux"
path = "src/main.rs"

[lib]
name = "itmux"
path = "src/lib.rs"

[dependencies]
# Recipe-directory schema/loader (EXP-0005). Pinned to APSS `main` at the #89
# merge commit (caef354), which carries the full recipe-directory standard
# incl. the Copilot-review fixes. Cargo still PRINTS non-fatal
# `invalid character '{' in package name: '{{slug}}'` diagnostics for the
# excluded template Cargo.tomls while scanning the git-source workspace - they
# are printed-but-non-fatal (the build and tests succeed).
agent_recipe = { git = "https://github.com/AgentParadise/agent-paradise-standards-system", rev = "caef354dd3782ae4f485c5ef875d7ceb647f0f97", package = "apss-v1-0005-agent-recipe" }
clap = { version = "4", features = ["derive"] }
regex = "1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Signal handling for `itmux run` two-tier cancellation. Required because the
# crate forbids `unsafe` (`unsafe_code = "forbid"`) and std has no safe API to
# install a SIGINT/SIGTERM handler - a raw `sigaction` needs `unsafe`.
# signal-hook encapsulates that FFI and exposes a safe, async-signal-safe
# self-pipe `Signals` iterator we drive from a normal watcher thread. Minimal,
# widely-used, unix-only (matching this docker/tmux host-side driver).
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
