[project]
name = "firecrawl-scraper"
version = "0.1.0"
description = "Web scraping tool using Firecrawl API with markdown output"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "firecrawl-py>=1.0.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Note: impl.local.py follows agentic-primitives naming convention
# Run with: uv run python impl.local.py scrape <url> <output>

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=firecrawl_scraper",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

